--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/native-stack": "^6.5.2",
     "axios": "^0.26.1",
     "react": "17.0.2",
     "react-native": "0.67.4",
+    "react-native-safe-area-context": "^4.2.2",
+    "react-native-screens": "^3.13.1",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
