--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-async-storage/async-storage": "^1.17.3",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.2",
+    "@types/react": "^17",
     "axios": "^0.26.1",
     "identity-obj-proxy": "^3.0.0",
     "react": "17.0.2",
