--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-root-import": "^6.6.0",
     "eslint": "^7.14.0",
+    "eslint-plugin-import-helpers": "^1.2.1",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.66.2",
     "react-test-renderer": "17.0.2",
